--- a/sass/_story.sass
+++ b/sass/_story.sass
@@ -8,6 +8,9 @@
     grid-template-rows: repeat(6,1fr)
     grid-template-columns: repeat(6,1fr)
     align-items: center
+    background-image: linear-gradient(rgba($color-primary,.6), rgba($color-primary, .6)), url('../img/back.jpg')
+
+
 
   &__img--1
     width: 100%
@@ -20,7 +23,7 @@
     grid-row: 4/6
     grid-column: 4/7
     z-index: 100
-    box-shadow: 0 2rem 5rem rgb(#000,.4)
+    box-shadow: 0 2rem 5rem rgb(#000,.3)
 
   &__content
     background-color: $color-grey-light-1
